# gaknot

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: test-notebooks.yml  test-package.yml
Proof/: lemma.ipynb
gaknot/: H1_branched_cover.sage  LT_signature.sage  cable_signature.sage  example-generator.sage  gaknot.sage  notebook_setup.py  signature.sage  utility.py
gaknot_lib/: H1_branched_cover.py  LT_signature.py  LT_signature.sage  __init__.py  character.py  gaknot.py  notebook_setup.py  signature.py
notebooks/: H1_branched_cover-test.ipynb  LT-signature-test.ipynb  character-test.ipynb  gaknot-test.ipynb  notebook_setup.py
research/: HKL-knots.ipynb  Makefile  algebraically-slice.ipynb  benchmark_signature.py  example_generator.sage  test_slicen_simple.py
src/gaknot/: __init__.py
src/gaknot/core/: gaknot.sage
src/gaknot/invariants/: H1_branched_cover.sage  LT_signature.sage  signature.sage
src/gaknot/legacy/: main.sage
src/gaknot/legacy/notebooks/: H1_branched_cover-test.ipynb  character-test.ipynb
test/: H1_branched_cover-test.ipynb  LT-signature-test.ipynb  character-test.ipynb  gaknot-test.ipynb  signature-test.ipynb
tests/: Makefile  test_character.py  test_gaknot.py  test_h1_branched_cover.py  test_lt_signature.py  test_signature.py
tests/notebooks/: H1_branched_cover-test.ipynb  LT-signature-test.ipynb  character-test.ipynb  gaknot-test.ipynb  notebook_setup.py  path.py  signature-test.ipynb
