[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaknot"
version = "0.1.0"
authors = [
  { name="Wojciech Politarczyk", email="wpolitarczyk@mimuw.edu.pl" },
]
description = "Generalized Algebraic Knot Invariants"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/wpolitarczyk/gaknot"
"Bug Tracker" = "https://github.com/wpolitarczyk/gaknot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
